2001-11-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add automake/force-preinstall.am,
	aclocal/ppc.am, remove ACLOCAL_M4.

2001-11-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/bsp-alias.m4: Remove score603e_g1.
	* aclocal/check-bsps.m4: Remove score603e_g1.
	* aclocal/prog-cc.m4: Apply m4_if.


2001-11-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/force-preinstall.am: New file.
	* aclocal/ppc.m4: New file.

2001-11-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/check-bsps.m4: Reworked.
	* aclocal/bsp-alias.m4: Add score603e_g1, apply m4sugar.

2001-11-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/bspopts.m4: New file.

2001-11-13	Joel Sherrill <joel@OARcorp.com>

	* COPYING: Test of $Id$ -> $RTEMS$.

2001-11-08	Dennis Ehlin (ECS) <Dennis.Ehlin@ecs.ericsson.se>

	This modification is part of the submitted modifications necessary to
	support the IBM PPC405 family.  This submission was reviewed by
	Thomas Doerfler <Thomas.Doerfler@imd-systems.de> who ensured it did
	not negatively impact the ppc403 BSPs.  The submission and tracking
	process was captured as PR50.
	* README.configure: Added gen405 BSP.

2001-10-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Adopt more automake rules:
	* automake/compile.am: Add LINK, CXXLINK, AS, ASCOMPILE; 
	Remove ARFLAGS, LINK.c, COMPILE.S, LINK.cc; 
	Add CPU_CFLAGS to CXXFLAGS, CFLAGS, ASFLAGS;
	* automake/leaf.am: Add CXXLINK_APP, LINK_APP, make-exe, apply
	CXXLINK_APP in make-cxx-exe.
	* automake/lib.am: Add ARFLAGS.

2001-10-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/check-rdbg.m4: Fix latent bug exposed by removal of
	config.cache's which prevented powerpc targets librdbg from building. 

2001-10-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/rtems-cpu-subdirs.m4: Add PREFIX arg to RTEMS_CPU_SUBDIRS,
	add 2nd arg to _RTEMS_CPU_SUBDIR.
	* aclocal/target.m4: Replace ac_configure_args with
	rtems_configure_args, add rtems_configure_args to INIT-CMDS.