@@ -1,0 +1,17 @@
+dnl $Id$
+
+dnl RTEMS_BSP_CONFIGURE
+dnl Commom macro to be included by all bsp-configure.acs
+AC_DEFUN([RTEMS_BSP_CONFIGURE],
+[
+  AC_PREREQ([2.52])
+  AM_MAINTAINER_MODE
+  RTEMS_ENV_RTEMSBSP
+
+  RTEMS_CHECK_CUSTOM_BSP(RTEMS_BSP)
+  RTEMS_CHECK_BSP_CACHE(RTEMS_BSP) 
+
+  RTEMS_CANONICAL_HOST
+  AM_CONFIG_HEADER([include/bspopts.h])
+  RTEMS_PROJECT_ROOT
+])
