@@ -1,3 +1,8 @@
+2001-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* aclocal/bsp-configure.m4: New file.
+	* Makefile.am: Add aclocal/bsp-configure.m4.
+
 2001-11-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* Makefile.am: Add automake/force-preinstall.am,
